August 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Implemented CDDA playing via SPUplayCDDAchannel().
   Now CD tracks can be played directly via a SPU plugin which implements the
   SPUplayCDDAchannel() function, e.g., spuEternal.
 * libpcsxcore/cdriso.h: Removed unused prototypes.
 * doc/tweaks.txt: Removed obsolete information.
 * win32/pcsx.dsp: Use Multithreaded instead of Singlethreaded.
 * plugins/dfsound/alsa.c: Set the buffer_time and period_time manually,
   hopefully the "lagging" issue can be fixed. Implemented
   SPUplayCDDAchannel() in the ALSA driver.

August 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfcdrom/cdr.c: Don't restart the track if play was called with
   the same time as the previous call.
 * libpcsxcore/cdriso.c: Added playCDDA() and stopCDDA() functions. (still
   not implemented)

August 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/plugins.h: Added prototype and interface for
   SPUplayCDDAchannel().
 * libpcsxcore/plugins.c: Likewise.

August 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/pcsx.rc: Completed the Cheat Search dialog.
 * win32/resource.h: Likewise.
 * win32/gui/CheatDlg.c: Implemented the Cheat Search dialog. Fixed MinGW
   compilation issue.
 * win32/gui/pcsx.dev: Fixed Dev-C++ build.
 * win32/WndMain.c: Moved Language menu into the Config menu.
 * gui/Cheat.c: Clamp values when editing value in Cheat Search dialog.
 * doc/tweaks.txt: Added instructions to allow CD-DA playing when using
   image files (as suggested by dario86).

August 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/WndMain.c: Set the language to the OS language by default.
 * win32/gui/ConfigurePlugins.c: Made some strings translatable.
 * win32/gui/CheatDlg.c: Fixed incorrect usage of SysMessage().
 * win32/pcsx.rc, win32/resource.h: Fixed manifest.

August 23, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Added "..." in menu items which will popup a dialog.